--- a/app/src/main/res/layout/fragment_physician3.xml
+++ b/app/src/main/res/layout/fragment_physician3.xml
@@ -6,9 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".R3_R8.PhysicianFragment3R5">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:foregroundTint="@color/white">
@@ -19,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/physician_r5_search_view_bg"
@@ -42,10 +40,11 @@
             android:id="@+id/physician_r5_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_below="@+id/physician_r5_searchView"
-            android:layout_marginTop="8dp"
-            android:background="@color/md_theme_light_surface"/>
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/md_theme_light_surface" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/physician_r5_floatingActionButton"
