--- a/app/src/main/res/layout/fragment_user1.xml
+++ b/app/src/main/res/layout/fragment_user1.xml
@@ -105,6 +105,7 @@
                 android:layout_height="match_parent"
                 android:padding="10dp"
                 android:inputType="textAutoComplete"
+                android:completionThreshold="1"
                 android:hint="@string/textView_physio"
 
                 />
@@ -153,6 +154,7 @@
                 android:layout_height="match_parent"
                 android:padding="10dp"
                 android:inputType="time"
+                android:completionThreshold="1"
                 android:hint="@string/textView_time"
                 >
 
