Made changes to several files in order to get UserFragment1R9 and other files and features associated with the addition of R9 up and running.

--- a/app/src/main/res/layout/activity_physician_r8.xml
+++ b/app/src/main/res/layout/activity_physician_r8.xml
@@ -77,7 +77,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
-            android:hint="@string/select"
+            android:hint="@string/physician_selectService"
             app:endIconDrawable="@drawable/baseline_create_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
