--- a/app/src/main/res/layout/activity_user_main.xml
+++ b/app/src/main/res/layout/activity_user_main.xml
@@ -7,7 +7,7 @@
     tools:context=".R9_R10.UserMainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/physician_constraintLayout_upper"
+        android:id="@+id/user_constraintLayout_upper"
         android:layout_width="413dp"
         android:layout_height="200dp"
         android:background="@color/md_theme_light_surfaceVariant"
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/physician_textView_company"
+            android:id="@+id/user_textView_company"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -31,7 +31,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/physician_textView_welcome"
+            android:id="@+id/user_textView_welcome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -41,10 +41,10 @@
             android:textColor="@color/black"
             android:textSize="22sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/physician_textView_company" />
+            app:layout_constraintTop_toBottomOf="@+id/user_textView_company" />
 
         <TextView
-            android:id="@+id/physician_textView_name"
+            android:id="@+id/user_textView_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -55,41 +55,43 @@
             android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/physician_textView_welcome" />
-
-        <ImageView
-            android:id="@+id/physician_imageView_exit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:importantForAccessibility="no"
-            app:layout_constraintBottom_toBottomOf="@+id/physician_textView_company"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/physician_textView_company"
-            app:srcCompat="@drawable/baseline_exit_to_app_24"
-            tools:ignore="ContentDescription" />
-
-        <ImageView
-            android:id="@+id/physician_imageView_account"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:importantForAccessibility="no"
-            app:layout_constraintBottom_toBottomOf="@+id/physician_textView_company"
-            app:layout_constraintEnd_toStartOf="@+id/physician_imageView_exit"
-            app:layout_constraintTop_toTopOf="@+id/physician_textView_company"
-            app:srcCompat="@drawable/baseline_account_circle_24" />
+            app:layout_constraintTop_toBottomOf="@+id/user_textView_welcome" />
 
         <ImageButton
-            android:id="@+id/physician_imageButton_notifications"
+            android:id="@+id/user_imageView_exit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:background="@null"
+            android:src="@drawable/baseline_exit_to_app_24"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:layout_constraintBottom_toBottomOf="@+id/user_textView_company"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/user_textView_company" />
+
+        <ImageButton
+            android:id="@+id/user_imageView_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:background="@null"
+            android:src="@drawable/baseline_account_circle_24"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:layout_constraintBottom_toBottomOf="@+id/user_textView_company"
+            app:layout_constraintEnd_toStartOf="@+id/user_imageView_exit"
+            app:layout_constraintTop_toTopOf="@+id/user_textView_company" />
+
+        <ImageButton
+            android:id="@+id/user_imageButton_notifications"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:background="@null"
+            android:foreground="?android:attr/selectableItemBackground"
             android:src="@drawable/baseline_notifications_24"
-            app:layout_constraintBottom_toBottomOf="@+id/physician_textView_company"
-            app:layout_constraintEnd_toStartOf="@+id/physician_imageView_account"
-            app:layout_constraintTop_toTopOf="@+id/physician_textView_company" />
+            app:layout_constraintBottom_toBottomOf="@+id/user_textView_company"
+            app:layout_constraintEnd_toStartOf="@+id/user_imageView_account"
+            app:layout_constraintTop_toTopOf="@+id/user_textView_company" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -109,7 +111,7 @@
         app:layout_constraintBottom_toTopOf="@+id/user_bottom_navigation_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/physician_constraintLayout_upper">
+        app:layout_constraintTop_toBottomOf="@+id/user_constraintLayout_upper">
 
     </FrameLayout>
 
