--- a/app/src/main/res/layout/fragment_physician1.xml
+++ b/app/src/main/res/layout/fragment_physician1.xml
@@ -61,36 +61,38 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/physician_textView_welcome" />
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/physician_imageView_exit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:importantForAccessibility="no"
+                android:layout_marginEnd="10dp"
+                android:background="@null"
+                android:src="@drawable/baseline_exit_to_app_24"
+                android:foreground="?android:attr/selectableItemBackground"
                 app:layout_constraintBottom_toBottomOf="@+id/physician_textView_company"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/physician_textView_company"
-                app:srcCompat="@drawable/baseline_exit_to_app_24"
-                tools:ignore="ContentDescription" />
+                app:layout_constraintTop_toTopOf="@+id/physician_textView_company" />
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/physician_imageView_account"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
-                android:importantForAccessibility="no"
+                android:background="@null"
+                android:src="@drawable/baseline_account_circle_24"
+                android:foreground="?android:attr/selectableItemBackground"
                 app:layout_constraintBottom_toBottomOf="@+id/physician_textView_company"
                 app:layout_constraintEnd_toStartOf="@+id/physician_imageView_exit"
-                app:layout_constraintTop_toTopOf="@+id/physician_textView_company"
-                app:srcCompat="@drawable/baseline_account_circle_24" />
+                app:layout_constraintTop_toTopOf="@+id/physician_textView_company" />
 
             <ImageButton
                 android:id="@+id/physician_imageButton_notifications"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
-                android:src="@drawable/baseline_notifications_24"
                 android:background="@null"
+                android:src="@drawable/baseline_notifications_24"
+                android:foreground="?android:attr/selectableItemBackground"
                 app:layout_constraintBottom_toBottomOf="@+id/physician_textView_company"
                 app:layout_constraintEnd_toStartOf="@+id/physician_imageView_account"
                 app:layout_constraintTop_toTopOf="@+id/physician_textView_company" />
