--- a/app/src/main/res/layout/fragment_physician2.xml
+++ b/app/src/main/res/layout/fragment_physician2.xml
@@ -13,7 +13,7 @@
         <com.google.android.material.textfield.TextInputLayout
 
             android:id="@+id/physician_r6_textInputLayout_calendarBtn"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
