--- a/app/src/main/res/menu/user_r9notifications_app_bar_layout.xml
+++ b/app/src/main/res/menu/user_r9notifications_app_bar_layout.xml
@@ -2,12 +2,12 @@
 <menu xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:id="@+id/account"
-        android:title="User account icon"
+        android:id="@+id/AdminR1_business"
         android:icon="@drawable/baseline_person_24"
         app:showAsAction="always"
-        />
-
+        tools:ignore="MenuTitle">
+    </item>
 
 </menu>
