--- a/app/src/main/res/layout/activity_user_r9_appointmentinfo.xml
+++ b/app/src/main/res/layout/activity_user_r9_appointmentinfo.xml
@@ -6,11 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".R9_R10.UserR9AppointmentInfoActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <com.google.android.material.appbar.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/user_topappBar_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,64 +21,87 @@
                 android:id="@+id/user_topappBar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:menu="@menu/user_r9appointmentinfo_app_bar_layout"
                 android:navigationIcon="@drawable/baseline_arrow_back_24"
                 app:title="Πληροφορίες"
+                app:menu="@menu/user_r9appointmentinfo_app_bar_layout"
                 app:titleCentered="true" />
 
-        </com.google.android.material.appbar.AppBarLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <TextView
-            android:id="@+id/textView_physio"
-            android:layout_width="329dp"
-            android:layout_height="65dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="74dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="110dp"
-            android:hint="@string/user_physio"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/text_Time"
-            app:layout_constraintStart_toStartOf="@+id/text_Date"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.039" />
 
-        <TextView
-            android:id="@+id/textView_service"
-            android:layout_width="329dp"
-            android:layout_height="65dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="40dp"
-            android:ems="10"
-            android:hint="@string/user_service"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_physio"
-            app:layout_constraintVertical_bias="0.01" />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/user_r9_physio_infoScreen"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+        android:layout_width="329dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="74dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="110dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/user_r9_time_infoScreen"
+        app:layout_constraintStart_toStartOf="@+id/user_r9_date_infoScreen"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.039" >
 
-        <TextView
-            android:id="@+id/text_Time"
-            android:layout_width="85dp"
-            android:layout_height="65dp"
-            android:layout_marginStart="284dp"
-            android:ems="10"
-            android:hint="@string/user_time"
-            android:inputType="time"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/text_Date"
-            app:layout_constraintEnd_toEndOf="@+id/textView_physio"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/text_Date"
-            app:layout_constraintVertical_bias="0.0" />
+    <EditText
+        android:id="@+id/textView_physio"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:hint="@string/user_physio"
+        android:textSize="18sp"
+       />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/user_r9_service_infoScreen"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+        android:layout_width="329dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/user_r9_physio_infoScreen"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@id/user_r9_physio_infoScreen"
+        app:layout_constraintTop_toBottomOf="@+id/user_r9_physio_infoScreen"
+        app:layout_constraintVertical_bias="0.01" >
 
         <EditText
+            android:id="@+id/textView_service"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/user_service"
+            android:textSize="18sp"
+           />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/user_r9_time_infoScreen"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+        android:layout_width="85dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="284dp"
+        android:ems="10"
+        app:layout_constraintBottom_toBottomOf="@+id/user_r9_date_infoScreen"
+        app:layout_constraintEnd_toEndOf="@+id/user_r9_physio_infoScreen"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/user_r9_date_infoScreen"
+        app:layout_constraintVertical_bias="0.0">
+
+        <EditText
+            android:id="@+id/text_Time"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/user_time"
+            android:inputType="time"
+            android:textSize="18sp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
             android:id="@+id/text_appointment_state"
             android:layout_width="334dp"
             android:layout_height="34dp"
@@ -95,44 +115,60 @@
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/text_Time"
+            app:layout_constraintEnd_toEndOf="@+id/user_r9_time_infoScreen"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/textView_service_cost"
-            app:layout_constraintTop_toBottomOf="@+id/textView_service_cost"
+            app:layout_constraintStart_toStartOf="@+id/user_r9_cost_infoScreen"
+            app:layout_constraintTop_toBottomOf="@+id/user_r9_cost_infoScreen"
             app:layout_constraintVertical_bias="0.0" />
 
-        <TextView
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/user_r9_cost_infoScreen"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+        android:layout_width="230dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/user_r9_date_infoScreen"
+        app:layout_constraintTop_toBottomOf="@+id/user_r9_date_infoScreen"
+        app:layout_constraintVertical_bias="0.0">
+
+        <EditText
             android:id="@+id/textView_service_cost"
-            android:layout_width="230dp"
-            android:layout_height="65dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:hint="Κόστος"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/text_Date"
-            app:layout_constraintTop_toBottomOf="@+id/text_Date"
-            app:layout_constraintVertical_bias="0.0" />
+             />
+    </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/user_r9_date_infoScreen"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+        android:layout_width="230dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="40dp"
+        android:ems="10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.019"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/user_r9_service_infoScreen"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <EditText
             android:id="@+id/text_Date"
-            android:layout_width="230dp"
-            android:layout_height="65dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="40dp"
-            android:ems="10"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:hint="@string/user_date"
             android:inputType="date"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.019"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView_service"
-            app:layout_constraintVertical_bias="0.0" />
+            />
+    </com.google.android.material.textfield.TextInputLayout>
 
 
 
