--- a/app/src/main/res/layout/activity_user_r9_notifications.xml
+++ b/app/src/main/res/layout/activity_user_r9_notifications.xml
@@ -27,4 +27,15 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <Button
+        android:id="@+id/user_notif_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TempButton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/user_r9notifications_appBarLayout"
+        app:layout_constraintVertical_bias="0.353" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
