--- a/app/src/main/res/layout/layout_physician_r4.xml
+++ b/app/src/main/res/layout/layout_physician_r4.xml
@@ -12,25 +12,26 @@
         android:layout_height="wrap_content"
         android:layout_alignWithParentIfMissing="false"
         android:layout_centerVertical="false"
-        android:height="52dp"
+        android:height="46dp"
         android:background="#F8F6F6"
         android:defaultFocusHighlightEnabled="true"
-        android:drawableRight="@drawable/baseline_arrow_right_36"
         android:focusable="auto"
         android:fontFamily="@font/roboto"
+        android:includeFontPadding="false"
         android:lineSpacingExtra="12sp"
-        android:paddingLeft="22dp"
-        android:paddingTop="4dp"
-        android:textAlignment="center"
+        android:paddingLeft="12dp"
+        android:paddingTop="16dp"
+        android:textAlignment="viewStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#191C19"
-        android:textSize="34sp"
-        tools:text="HH/MM/EEEE" />
+        android:textSize="16sp"
+        tools:text="HH/MM/EEEE          PAPANIKOLAOY                        100$" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_below="@+id/history1" />
+        android:layout_below="@+id/history1"
+        android:background="#F8F6F6" />
 
 
 </RelativeLayout>
